# vllm_hybrid

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARK_RESULTS.md  CHANGES_FROM_UPSTREAM.md  CLAUDE.md  CMakeLists.txt  Deployment.md  FUTURE_PLAN.md  PLAN.md  README.md  RESEARCH.md  TODO.md  TODO_TASKS.md  Task_done.md  Tech_done.md  cleanup.py  debug_shm_manual.py  debug_zmq_basic.py  gpu_only_i9.json  gpu_only_qwen.json  gpu_only_qwen_inf.json  gpu_only_qwen_saturated.json  hybrid_i9.json  hybrid_qwen.json  hybrid_qwen_inf.json  hybrid_qwen_saturated.json  output_crash_repro.txt  output_nccl_test.txt  output_pp_test.txt  output_sync_fix.txt  output_sync_fix_2.txt  output_sync_fix_3.txt  output_sync_fix_4.txt  output_sync_fix_5.txt  output_uvloop.txt  output_uvloop_v10.txt  output_uvloop_v11.txt  output_uvloop_v12.txt  output_uvloop_v13.txt  (+70 more)
csrc/cpu/pacpu/: CMakeLists.txt  amx_kernel.cpp  build.sh  core.h  dtype.h  pacpu.cpp  pacpu.ispc
shadow_assists/features/IDE_016_avx512_amx_pool/: CLAUDE.md  CMakeLists.txt  README.md  task.md  test.md
shadow_assists/features/IDE_016_avx512_amx_pool/SUB_171_avx512_tokenizer/: RESULTS.md
shadow_assists/features/IDE_016_avx512_amx_pool/SUB_173_tokenizer_canonical_e2e/: RESULTS.md  _monitor_avx512_on_cpu.csv  _monitor_avx512_on_gpu.csv  _monitor_off_cpu.csv  _monitor_off_gpu.csv  aggregate.py
shadow_assists/features/IDE_016_avx512_amx_pool/SUB_174_sampling_canonical_e2e/: RESULTS.md  _monitor_avx512_on_cpu.csv  _monitor_avx512_on_cpu_legacy_run1.csv  _monitor_avx512_on_gpu.csv  _monitor_avx512_on_gpu_legacy_run1.csv  _monitor_off_cpu.csv  _monitor_off_gpu.csv
shadow_assists/features/IDE_016_avx512_amx_pool/SUB_174_sampling_canonical_e2e/logs/: metrics_trident_on.txt  metrics_vanilla_on.txt
shadow_assists/features/IDE_016_avx512_amx_pool/SUB_175_amx_matmul_canonical/: RESULTS.md  _monitor_off_cpu.csv  _monitor_off_gpu.csv  amx_rows.json  microbench.py  pt_rows_t1.json  pt_rows_t32.json  pt_rows_t4.json
shadow_assists/features/IDE_016_avx512_amx_pool/SUB_175_amx_matmul_canonical/logs/: launcher.sh
shadow_assists/features/IDE_016_avx512_amx_pool/SUB_177_amx_prefill_canonical/: RESULTS.md  _monitor_off_cpu.csv  _monitor_off_gpu.csv  amx_rows.json  microbench_prefill.py  pt_t1.json  pt_t32.json  pt_t4.json  run_sub177.sh  ttft_profile.py
shadow_assists/features/IDE_016_avx512_amx_pool/SUB_177_amx_prefill_canonical/ttft_profile/: ttft_vanilla.json
shadow_assists/features/IDE_016_avx512_amx_pool/SUB_190_async_tokenizer_worker/: AGGREGATE.md  RESULTS.md  _monitor_off_cpu.csv  _monitor_off_gpu.csv  _monitor_on_cpu.csv  _monitor_on_gpu.csv  aggregate.py  launcher.sh
shadow_assists/features/IDE_016_avx512_amx_pool/SUB_190_async_tokenizer_worker/src/: async_tokenizer_worker.cpp
shadow_assists/features/IDE_016_avx512_amx_pool/avx512_amx_pool/: __init__.py
shadow_assists/features/IDE_016_avx512_amx_pool/src/: python_bindings.cpp
shadow_assists/features/IDE_016_avx512_amx_pool/src/_python/: avx512_sampling.py  tokenizer.py
shadow_assists/features/IDE_016_avx512_amx_pool/src/amx_matmul/: amx_kernels.h  amx_qwen_draft.cpp
shadow_assists/features/IDE_016_avx512_amx_pool/src/avx512_sampling/: logit_processor.cpp  penalty_ops.cpp  sampling_kernels.h  topk_topp_kernel.cpp
shadow_assists/features/IDE_016_avx512_amx_pool/src/avx512_tokenizer/: batch_bpe_kernel.cpp  tokenizer_kernels.h
shadow_assists/features/IDE_016_avx512_amx_pool/tests/: bench_sampling_latency.py  bench_tokenizer_latency.py  test_correctness_vs_gpu.py  test_tokenizer_correctness.py
shadow_assists/features/IDE_018_phase_burst/: CLAUDE.md  CMakeLists.txt  README.md  task.md  test.md
shadow_assists/features/IDE_018_phase_burst/SUB_169_canonical_e2e/: AGGREGATE.md  RESULTS.md  _monitor_off_cpu.csv  _monitor_off_gpu.csv  _monitor_phase_burst_on_cpu.csv  _monitor_phase_burst_on_gpu.csv  accuracy_gate_probe.py  aggregate.py
shadow_assists/features/IDE_018_phase_burst/SUB_169_canonical_e2e/phase_burst_stats/: stats_snapshot.txt
shadow_assists/features/IDE_018_phase_burst/SUB_170_accuracy_gate/: RESULTS.md  gate_summary.json  logprobs_off.json  logprobs_on.json
shadow_assists/features/IDE_018_phase_burst/SUB_184_task_pool_fill/: AGGREGATE.md  RESULTS.md  _monitor_off_cpu.csv  _monitor_off_gpu.csv  _monitor_on_cpu.csv  _monitor_on_gpu.csv  aggregate.py  launcher.sh
shadow_assists/features/IDE_018_phase_burst/SUB_184_task_pool_fill/logs/: phase_burst_log_on.txt
shadow_assists/features/IDE_018_phase_burst/SUB_188_side_channel_precompute/: AGGREGATE.md  RESULTS.md  _monitor_off_cpu.csv  _monitor_off_gpu.csv  _monitor_on_cpu.csv  _monitor_on_gpu.csv  aggregate.py  launcher.sh
shadow_assists/features/IDE_018_phase_burst/SUB_188_side_channel_precompute/src/: side_channel_precompute.cpp
shadow_assists/features/IDE_018_phase_burst/SUB_191_side_channel_stack/: RESULTS.md  _monitor_off_cpu.csv  _monitor_off_gpu.csv  _monitor_on_cpu.csv  _monitor_on_gpu.csv  aggregate.py  launcher.sh
shadow_assists/features/IDE_018_phase_burst/SUB_191_side_channel_stack/logs/: stack_off.txt  stack_on.txt
shadow_assists/features/IDE_018_phase_burst/SUB_193_phase_burst_retract_writeup/: RESULTS.md
shadow_assists/features/IDE_018_phase_burst/SUB_196_work_pattern_ablation/: RESULTS.md
shadow_assists/features/IDE_018_phase_burst/SUB_196_work_pattern_ablation/cellA_regular_10ms/: _monitor_off_cpu.csv  _monitor_off_gpu.csv  _monitor_on_cpu.csv  _monitor_on_gpu.csv  aggregate.py  launcher.sh
shadow_assists/features/IDE_018_phase_burst/design/: vllm_patch_design.md
shadow_assists/features/IDE_018_phase_burst/phase_burst/: __init__.py
shadow_assists/features/IDE_018_phase_burst/src/: phase_detector.cpp  phase_detector.h  python_bindings.cpp  scheduler.cpp  scheduler.h  task_pool.h  task_pool_attention.cpp  task_pool_dummy_fill.cpp  task_pool_linear.cpp
shadow_assists/features/IDE_018_phase_burst/tests/: bench_phase_latency.cpp  test_phase_burst_e2e.py  test_scheduler_cpp.cpp
(+9122 files in other folders)
